--- a/static/css/raw/partials/layout/_team.css
+++ b/static/css/raw/partials/layout/_team.css
@@ -20,23 +20,20 @@
         .team-name {
             font-family: $font-2;
             font-size: 2.5em;
-            font-size: 2.5vw;
         }
         .team-tagline {
             margin-top: -15px;
             font-size: 1.3em;
-            font-size: 1.3vw;
             letter-spacing: 1px;
             word-spacing: 2px;
         }
-
 
 
         /* Smartphones (portrait and landscape) ----------- */
         @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
         /* Styles */
             .team-tagline {
-                    font-size: 1.1em;
+                    font-size: 1em;
                 }
         }
 
